Change name from AMCalc to OpenRadiac

--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 
 """
-    Setup script for amcalc calculations.
+    Setup script for OpenRadiac calculations.
   
    
     Written by Carlos A. Gimenez, Natural and Exact Science Faculty
@@ -11,7 +11,7 @@
     Contributors: --
    
     Environment variables used by pam:
-             DIRTIMEOUT        - time out limit for amcalc run
+             DIRTIMEOUT        - time out limit for OpenRadiac run
           
 """
 
@@ -25,7 +25,7 @@ if sys.version < '2.4':
 
 class set_enviroment:
   """
-  class for handling the amcalc setup
+  class for handling the OpenRadiac setup
   """
   def __init__(self):
     """
